Push remaining changes

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,11 +588,14 @@
     "            #lowercase\n",
     "            phrase = phrase.lower()\n",
     "        if \"newlines\" in self.preprocessing:\n",
-    "            phrase = \" \".join(filter(None, phrase.split(\"\\n\")))\n",
+    "            # phrase = \" \".join(filter(None, phrase.split(\"\\n\")))\n",
+    "            phrase = phrase.replace(\"\\n\", \" \")\n",
     "        if \"returns\" in self.preprocessing:\n",
-    "            phrase = \" \".join(filter(None, phrase.split(\"\\r\")))\n",
+    "            # phrase = \" \".join(filter(None, phrase.split(\"\\r\")))\n",
+    "            phrase = phrase.replace(\"\\r\", \" \")\n",
     "        if \"tabs\" in self.preprocessing:\n",
-    "            phrase = \" \".join(filter(None, phrase.split(\"\\t\")))\n",
+    "            # phrase = \" \".join(filter(None, phrase.split(\"\\t\")))\n",
+    "            phrase = phrase.replace(\"\\t\", \" \")\n",
     "        if \"punc\" in self.preprocessing:\n",
     "            #remove punctuation\n",
     "            phrase = phrase.translate(str.maketrans('','',string.punctuation))\n",
@@ -793,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,13 +814,18 @@
     "        \"\"\"extract bodies\"\"\"\n",
     "\n",
     "        self.bodies = self.data[self.bodyColumn]\n",
+    "        print(\"Bodies\")\n",
     "        \n",
     "        #apply preprocessing function to all phrases using list comprehension\n",
     "        self.preprocessed_phrases = [self.preprocess_phrase(phrase) for phrase in self.bodies]\n",
+    "        print(\"pp\")\n",
     "        self.features = [self.extract_features_from_phrase(phrase) for phrase in self.preprocessed_phrases]\n",
+    "        print(\"features\")\n",
     "\n",
     "        data = {'id': self.data['id'], 'ppBody': self.features, 'label': self.data['Label']}\n",
+    "        print(\"dict\")\n",
     "        self.pp_df = pd.DataFrame(data=data)\n",
+    "        print(\"df\")\n",
     "\n",
     "    def process_dataset(self):\n",
     "        \"\"\"applies post-processing to the dataframe rows\"\"\"\n",
